applications/monitoring/base/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
  annotations:
    addons_domain: placeholder-domain
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: lan-gateway
      namespace: traefik
  hostnames:
    - grafana.placeholder-domain
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ''
          kind: Service
          name: kube-prometheus-stack-grafana
          port: 80
          weight: 1
